--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.15",
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
+    "mongodb": "^4.1.4",
+    "node-fetch": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
