--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@types/styled-components": "^5.1.15",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
+    "md5": "^2.3.0",
     "mongodb": "^4.1.4",
     "node-fetch": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.19.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
