--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/styled-components": "^5.1.15",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
+    "gsap": "^3.8.0",
     "md5": "^2.3.0",
     "mongodb": "^4.1.4",
     "node-fetch": "^3.0.0",
